crates/pandalang/src/snapshots/pandalang__parser__tests__parses@int__double_digit.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/int/double_digit.panda
---
Ok(
    Int(
        Int {
            n: 10,
        },
    ),
)
