crates/pandalang/src/snapshots/pandalang__parser__tests__parses@int__int.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/int/int.panda
---
Ok(
    Int(
        Int {
            n: 0,
        },
    ),
)
